--- a/Proje/flutter_staj_uyg/pubspec.yaml
+++ b/Proje/flutter_staj_uyg/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_maps_flutter: ^2.2.0
   location: ^5.0.0
   flutter_polyline_points: ^2.0.0
+  background_location: ^0.13.0
+  geolocator: ^9.0.0 
 
 dev_dependencies:
   flutter_test:
