--- a/Proje/flutter_staj_uyg/pubspec.yaml
+++ b/Proje/flutter_staj_uyg/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   flutter_polyline_points: ^2.0.0
   background_location: ^0.13.0
   geolocator: ^9.0.0 
+  firebase_core: any
+  firebase_auth: ^4.6.3
+  cloud_firestore: ^4.8.2
+  firebase_storage: ^11.2.4
 
 dev_dependencies:
   flutter_test:
